/*
 * Copyright 2014 WANdisco
 *
 *  WANdisco licenses this file to you under the Apache License,
 *  version 2.0 (the "License"); you may not use this file except in compliance
 *  with the License. You may obtain a copy of the License at:
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 *  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 *  License for the specific language governing permissions and limitations
 *  under the License.
 */

package c5db.messages;

option java_package = "c5db.messages.generated";

option optimize_for = SPEED;

enum ModuleType {
    // Cluster discovery module
    Discovery = 1;
    // Replication module
    Replication = 2;
    // Tablet module (eg: HRegion)
    Tablet = 3;
    // RegionServer RPC module
    RegionServer = 4;
    // Management Module
    Management = 5;
    // Write Ahead Log Module
    Log = 6;
    // Event logger
    EventLog = 7;
    // Web Management
    WebAdmin = 8;
    ControlRpc = 9;
}

message StartModule {
    optional ModuleType module = 1;
    optional int32 module_port = 2 [default = 0];
    optional string module_argv = 3;
}

message StopModule {
    optional ModuleType module = 1;
    // Set this to true to make it a 'hard stop', otherwise a graceful shutdown will be used.
    optional bool hard_stop = 2;
    optional string stop_reason = 3;
}

message ModuleSubCommand {
    optional ModuleType module = 1;
    optional string sub_command = 2;
}

message CommandReply {
    optional bool command_success = 1 [default = false];
    optional string command_stdout = 2;
    optional string command_stderr = 3;
}

message ControlWireMessage {
    optional int64 receipientNodeId = 1;
    optional string subType = 2;
    optional bytes subMessage = 3;
}
